<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.mths0x5f.guiaufu.ru.CardapioFragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewMealName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/main_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewMainCourse" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/vegetarian_course" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewVegetarianCourse" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/beans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewBeans" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/garnish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewGarnish" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/salad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewSalad" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/dessert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewDessert" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAllCaps="true"
                android:text="@string/juice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lorem_ipsum"
                android:id="@+id/textViewJuice" />







        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
